fixed header in menu to align properly
fixed menu in header builds so that everything aligns properly also logo size is now div col based.

--- a/Complete Layouts/Base Layout/css/_him.scss
+++ b/Complete Layouts/Base Layout/css/_him.scss
@@ -1,14 +1,4 @@
 /* Custom classes and css for menu in the header */
-.absolutey {
-    position:absolute;
-    top:0;
-    left:35%;
-    margin-top:-75px;
-}
-
-.btn {
-    
-}
 
 #large-navigation-container-2{
 			background-color:rgba($color-second, .1);
